# LHC-data-pipeline

./: .gitignore  LICENSE  README.md  docker-compose.yml  requirements.txt
.github/workflows/: ci.yml
dashboard/: server.py
dashboard/static/css/: style.css
dashboard/static/js/: app.js
dashboard/templates/: index.html
database/: schema.sql
event_generator/: CMakeLists.txt
event_generator/include/: event_generator.h
event_generator/src/: event_generator.cpp  main.cpp
pipeline/: config.py  consumer.py  producer.py  trigger.py
scripts/: setup.sh
